--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Birthday wish</title>
+    <title>AI Birthday Wish Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI Birthday Wish Generator!</h1>
+    <header>
+      <h1>AI Birthday Wish Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the key words"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+    </main>
+
+    <div>Birthday wish will be here</div>
+
     <footer>
       This AI project was coded by
       <a href="https://github.com/lili-gim" target="_blank">Liliia Gimaeva</a>,
