--- a/index.html
+++ b/index.html
@@ -7,38 +7,43 @@
     <title>AI Birthday Wish Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI Birthday Wish Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the key words"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-    </main>
+    <div class="container">
+      <header>
+        <h1>AI Birthday Wish Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            class="key-words"
+            placeholder="Enter the key words"
+            autofocus
+            required
+            autocomplete="off"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+      </main>
 
-    <div>Birthday wish will be here</div>
+      <div class="birthday-wish">Birthday wish will be here</div>
 
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/lili-gim" target="_blank">Liliia Gimaeva</a>,
-      is
-      <a
-        href="https://github.com/lili-gim/birthday-wish-generator"
-        target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and is
-      <a href="https://ai-birthday-wish-generator.netlify.app/" target="_blank"
-        >hosted on Netlify</a
-      >
-    </footer>
-    <script src="src/index.js"></script>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/lili-gim" target="_blank">Liliia Gimaeva</a
+        >, is
+        <a
+          href="https://github.com/lili-gim/birthday-wish-generator"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and is
+        <a
+          href="https://ai-birthday-wish-generator.netlify.app/"
+          target="_blank"
+          >hosted on Netlify</a
+        >
+      </footer>
+      <script src="src/index.js"></script>
+    </div>
   </body>
 </html>
