--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Birthday Wish Generator</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
         <h1>AI Birthday Wish Generator</h1>
       </header>
       <main>
-        <form>
+        <form class="form" id="form">
           <input
             type="text"
             class="key-words"
@@ -25,7 +26,7 @@
         </form>
       </main>
 
-      <div class="birthday-wish">Birthday wish will be here</div>
+      <div class="birthday-wish" id="wish">Birthday wish will be here</div>
 
       <footer>
         This AI project was coded by
